# rust-pdfguard

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  build_pdfguard.sh  index.html  index.txt  install_pdfguard_wasm_to_demo.sh
404/: index.html
_next/static/chunks/: 07467c54192c09ba.js  076d89109d31885b.js  09cc8ed7e6608970.js.map  0c4b39c5d5c7b1e4.js  3bb3d88888364914.js  40fbfb98dbc3c16a.js  44dbe54876cbfd64.js.map  50b647d5737a3de1.js.map  565c77f095179b62.js  5d1ef3c152d33264.js  604a71a760da30dd.js.map  6933302ce9e8d8df.js.map  6cab20a6fc307c61.js  6ef2e8c8ed944ea0.js  6ff498b3e8dca7cf.js  7f2328b0167cabe8.js  816176135460e9c0.js  82e1b8f3d53e1411.js  9578e24f34417ef2.css.map  98180b3a9c74467e.js  9825633cf4e0744e.js.map  a160f31b8481fe09.js.map  a2539a091a4b1bcf.js  a5e24ba4376633b0.js  bc0253bca0b17787.js.map  bc95abd610af896f.js.map  c27c173c5e66846c.js.map  cab938417fbb74a5.js  ce646d07a32133fc.css  ceb811a7059290dd.js  d6e405e6f013ae2c.js.map  db9bd3acd249dae3.js.map  e39de1dfb86acb23.js.map  e89476a22e6e789a.js  ec1b3a0e71dc5b79.js  ef566c1117371158.js.map  f9c50436720e46f1.js.map  fd7d2de0636588eb.js
_next/static/media/: rf_validator_bg.64704b4a.wasm
_next/static/zCI9jksaQ0upMtQaSd-k2/: _buildManifest.js
demo/: next.config.ts  package-lock.json  package.json
demo/src/: package.json
demo/src/app/: layout.tsx  page.tsx
demo/src/components/: file-upload.tsx
demo/src/rust/: package.json  rf_validator.d.ts  rf_validator.js  rf_validator_bg.js  rf_validator_bg.wasm.d.ts
src/: filetype.rs  lib.rs  main.rs  pdf_analysis.rs
(+2 files in other folders)
