[package]
name = "rf_validator"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.11.1"
serde = "1.0.219"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
once_cell = "1.19"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }